--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.32", features = ["derive"] }
 opentelemetry-proto = "0.28.0"
 prost = "0.13.5"
 serde = "1.0.219"
+serde_json = "1.0.140"
 tokio = { version = "1.44.0", features = ["full"] }
 tonic = "0.12.3"
 tower = "0.5.2"
