--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ axum = { version = "0.8.1", features = ["macros"] }
 base64 = "0.22.1"
 bytes = "1.10.1"
 clap = { version = "4.5.32", features = ["derive"] }
+http-body-util = "0.1.3"
 opentelemetry-proto = "0.28.0"
 prost = "0.13.5"
 serde = "1.0.219"
